@startuml
title Hình D.1 - ERD nhóm người dùng và xác minh
hide methods
entity users {
  * id : uuid <<PK>>
  --
  email : varchar <<UQ>>
  password : varchar
  phone : varchar <<UQ>>
  fullName : varchar
  role : enum
  sellerType : enum
  status : enum
  isEmailVerified : boolean
  isTwoFactorEnabled : boolean
}
entity user_addresses {
  * id : uuid <<PK>>
  --
  userId : uuid <<FK>>
  province : varchar
  district : varchar
  ward : varchar
  detail : varchar
  isDefault : boolean
}
entity user_sessions {
  * id : uuid <<PK>>
  --
  userId : uuid <<FK>>
  device : varchar
  browser : varchar
  ipAddress : varchar
  expiresAt : timestamp
}
entity user_verifications {
  * id : uuid <<PK>>
  --
  userId : uuid <<FK>>
  type : enum
  otp : varchar
  attempts : int
  expiresAt : timestamp
}
entity user_identities {
  * id : uuid <<PK>>
  --
  userId : uuid <<FK,UQ>>
  idType : enum
  idNumber : varchar
  frontImage : varchar
  backImage : varchar
  selfieImage : varchar
  status : enum
}
entity professional_seller_profiles {
  * id : uuid <<PK>>
  --
  userId : uuid <<FK,UQ>>
  storeName : varchar
  taxCode : varchar <<UQ>>
  legalAddress : varchar
  status : enum
}
users ||--o{ user_addresses
users ||--o{ user_sessions
users ||--o{ user_verifications
users ||--o| user_identities
users ||--o| professional_seller_profiles
@enduml
